# mana

./: .gitattributes  .gitmodules  BUILDING.md  CMakeLists.txt  README.md  install_dependencies.sh  mana.csproj  readme.md
assets/engine/csharp/: makefile
assets/sample/: assets.pak
cmake/: common.cmake  config.cmake  editor.cmake  engine-platform.cmake  engine.cmake  extern.cmake  imgui.cmake  platform.cmake  runtime.cmake  sample.cmake
common/: README.md
common/include/: common.hpp
common/include/common/: matrixmath.hpp  mesh.hpp
common/src/async/: threadpool.cpp
common/src/compression/: gzip.cpp
common/src/crypto/: aes.cpp  sha.cpp
editor/include/: editor.hpp  mana-editor.hpp
editor/include/editor/: mainwindow.hpp
editor/src/: mainwindow.cpp
editor/src/compiler/: projectcompiler.cpp
editor/src/editor/: main.cpp  mainwindow.cpp
editor/src/gui/: main.cpp  mainwindow.cpp
editor/src/qt/: main.cpp  mainwindow.cpp
engine/: README.md
engine/csharp/: makefile
engine/csharp/mana/: script.cs
engine/include/: engine.hpp  mana.hpp  platform.hpp
engine/include/common/: grid.hpp  image.hpp  matrix.hpp  matrixmath.hpp  mesh.hpp  normalize.hpp  quaternion.hpp  rectangle.hpp  rotation.hpp  transform.hpp  vertex.hpp
engine/include/engine/: application.hpp
engine/src/2d/: renderer2d.cpp
platform/: README.md
platform/include/: platform.hpp
runtime/include/: mana-runtime.hpp  runtime.hpp
sample/: assets.pak
sample/assets/: frag.fs  frag.hlsl  resources.json  sampleResources.json  sampleScene.json  scene.json  testscript.cs  vert.hlsl  vert.vs
sample/src/: game.hpp  main.cpp  sample0.hpp  sample1.hpp  sample2.hpp  sampleapplication.hpp  script.cs  shadersource.hpp
source/editor/: README.md
source/engine/: README.md
(+1267 files in other folders)
