cmake_minimum_required(VERSION 2.8)

project(Mana)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package (Threads REQUIRED)

include_directories(${PROJECT_SOURCE_DIR}/lib/include)
link_directories(${PROJECT_SOURCE_DIR}/lib/bin)

include(cmake/engine.cmake)
include(cmake/editor.cmake)
include(cmake/runtime.cmake)
include(cmake/sample.cmake)